--- a/desafio-DEV EVOLUTION/src/challenge.html
+++ b/desafio-DEV EVOLUTION/src/challenge.html
@@ -16,7 +16,7 @@
             <input id="start" type="button" value="Iniciar" onclick="start()">
         </div>
         <div id="user">
-            <p id="alert">Prencha o seu nome</p>
+            <p id="alert">Preencha o seu nome</p>
             <input type="text" id="data-user" name="user" placeholder="Insira o seu nome" required>
             <input id="start" type="button" value="Continuar" onclick="startGame()">
         </div>
