--- a/desafio-DEV EVOLUTION/src/challenge.html
+++ b/desafio-DEV EVOLUTION/src/challenge.html
@@ -15,7 +15,7 @@
         <div id="welcome">
             <h2>Bem vindo</h2>
             <p class="descriptionGame">Este jogo contém 5 perguntas de multipla escolha</p>
-            <p class="descriptionGame">Para cada segundo passado, será tirado 1 ponto na sua pontuação final</p>
+            <p class="descriptionGame">Cada acerto vale 100 pontos e cada segundo passado, será tirado 1 ponto na sua pontuação final</p>
             <input class="start" type="button" value="Iniciar" onclick="start()">
         </div>
         <div id="user">
@@ -27,23 +27,23 @@
         <div class="container-question" id="container-1">
             <h3 class="ask">1. De quem é a famosa frase “Penso, logo existo”?</h3>
             <div class="form-check-inline">
-                <input type="radio" name="question-one" class="input-response" value="false">
+                <input type="radio" name="question-1" class="input-response" value="false" checked>
                 <label>Francis Bacon</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-one" class="input-response" value="false">
+                <input type="radio" name="question-1" class="input-response" value="false">
                 <label>Platão</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-one" class="input-response" value="false">
+                <input type="radio" name="question-1" class="input-response" value="false">
                 <label>Galileu Galilei</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-one" class="input-response" value="true">
+                <input type="radio" name="question-1" class="input-response" value="true">
                 <label>Descartes</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-one" class="input-response" value="false">
+                <input type="radio" name="question-1" class="input-response" value="false">
                 <label>Sócrates</label>
             </div>
         </div>
@@ -51,23 +51,23 @@
         <div class="container-question" id="container-2">
             <h3 class="ask">2. De onde é a invenção do chuveiro elétrico?</h3>
             <div class="form-check-inline">
-                <input type="radio" name="question-two" class="input-response" value="false">
+                <input type="radio" name="question-2" class="input-response" value="false" checked>
                 <label>França</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-two" class="input-response" value="false">
+                <input type="radio" name="question-2" class="input-response" value="false">
                 <label>Inglaterra</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-two" class="input-response" value="true">
+                <input type="radio" name="question-2" class="input-response" value="true">
                 <label>Brasil</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-two" class="input-response" value="false">
+                <input type="radio" name="question-2" class="input-response" value="false">
                 <label>Austrália</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-two" class="input-response" value="false">
+                <input type="radio" name="question-2" class="input-response" value="false">
                 <label>Itália</label>
             </div>
         </div>
@@ -75,23 +75,23 @@
         <div class="container-question" id="container-3">
             <h3 class="ask">3. Quais o menor e o maior país do mundo?</h3>
             <div class="form-check-inline">
-                <input type="radio" name="question-three" class="input-response" value="true">
-                <label>Vaticano e Rússia</label>
-            </div>
-            <div class="form-check-inline">
-                <input type="radio" name="question-three" class="input-response" value="false">
-                <label>Nauru e China</label>
-            </div>
-            <div class="form-check-inline">
-                <input type="radio" name="question-three" class="input-response" value="false">
-                <label>Malta e Estados Unidos</label>
-            </div>
-            <div class="form-check-inline">
-                <input type="radio" name="question-three" class="input-response" value="false">
+                <input type="radio" name="question-3" class="input-response" value="false" checked>
                 <label>São Marino e Índia</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-three" class="input-response" value="false">
+                <input type="radio" name="question-3" class="input-response" value="false">
+                <label>Nauru e China</label>
+            </div>
+            <div class="form-check-inline">
+                <input type="radio" name="question-3" class="input-response" value="false">
+                <label>Malta e Estados Unidos</label>
+            </div>
+            <div class="form-check-inline">
+                <input type="radio" name="question-3" class="input-response" value="true">
+                <label>Vaticano e Rússia</label>
+            </div>
+            <div class="form-check-inline">
+                <input type="radio" name="question-3" class="input-response" value="false">
                 <label>Mônaco e Canadá</label>
             </div>
         </div>
@@ -99,23 +99,23 @@
         <div class="container-question" id="container-4">
             <h3 class="ask">4. Qual o grupo em que todas as palavras foram escritas corretamente?</h3>
             <div class="form-check-inline">
-                <input type="radio" name="question-four" class="input-response" value="false">
+                <input type="radio" name="question-4" class="input-response" value="false" checked>
                 <label>Asterístico, beneficiente, meteorologia, entertido</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-four" class="input-response" value="true">
+                <input type="radio" name="question-4" class="input-response" value="true">
                 <label>Asterisco, beneficente, meteorologia, entretido</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-four" class="input-response" value="false">
+                <input type="radio" name="question-4" class="input-response" value="false">
                 <label>Asterisco, beneficente, metereologia, entretido</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-four" class="input-response" value="false">
+                <input type="radio" name="question-4" class="input-response" value="false">
                 <label>Asterístico, beneficiente, metereologia, entretido</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-four" class="input-response" value="false">
+                <input type="radio" name="question-4" class="input-response" value="false">
                 <label>Asterisco, beneficiente, metereologia, entretido</label>
             </div>
         </div>
@@ -123,23 +123,23 @@
         <div class="container-question" id="container-5">
             <h3 class="ask">5. Quantas casas decimais tem o número pi?</h3>
             <div class="form-check-inline">
-                <input type="radio" name="question-five" class="input-response" value="false">
+                <input type="radio" name="question-5" class="input-response" value="false" checked>
                 <label>Duas</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-five" class="input-response" value="false">
+                <input type="radio" name="question-5" class="input-response" value="false">
                 <label>Centenas</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-five" class="input-response" value="true">
+                <input type="radio" name="question-5" class="input-response" value="true">
                 <label>Infinitas</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-five" class="input-response" value="false">
+                <input type="radio" name="question-5" class="input-response" value="false">
                 <label>Vinte</label>
             </div>
             <div class="form-check-inline">
-                <input type="radio" name="question-five" class="input-response" value="false">
+                <input type="radio" name="question-5" class="input-response" value="false">
                 <label>Milhares</label>
             </div>
         </div>
