--- a/desafio-DEV EVOLUTION/src/challenge.html
+++ b/desafio-DEV EVOLUTION/src/challenge.html
@@ -159,7 +159,7 @@
         <input id="next" type="button" value="Proxima">
         <input id="finalize" type="button" value="Concluir" onclick="concluded()">
     </div>
-    <script src="./js/index.js"></script>
+    <script src="./js/challenge.js"></script>
 </body>
 
 </html>
